--- a/CodeNotesInteractive/app/src/main/res/values/strings.xml
+++ b/CodeNotesInteractive/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">CodeNotesInteractive</string>
+    <string name="bottom_menu_chat">ChatBot</string>
+    <string name="bottom_menu_codenotes">Code</string>
+    <string name="bottom_menu_simulation">Simulation</string>
 </resources>
