--- a/CodeNotesInteractive/app/src/main/res/values/strings.xml
+++ b/CodeNotesInteractive/app/src/main/res/values/strings.xml
@@ -11,6 +11,7 @@
     <string name="no_code_detected">I am sorry! I could not recognize a meaningful code...</string>
     <string name="no_code_dialog_message">I am sorry! I could not recognize a meaningful code...</string>
     <string name="no_code_dialog_title">I could not recognize the code</string>
+    <string name="all_text_required">All fields are required</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
@@ -19,6 +20,6 @@
     <string name="incline_angle">Angle of Inclination</string>
     <string name="weight">Weight</string>
     <string name="coeff_friction">Coefficient of Friction</string>
-    <string name="start">START</string>
+    <string name="setparams">Set Parameters</string>
     <string name="reset">RESET</string>
 </resources>
