--- a/CodeNotesInteractive/app/src/main/res/values/strings.xml
+++ b/CodeNotesInteractive/app/src/main/res/values/strings.xml
@@ -22,4 +22,5 @@
     <string name="coeff_friction">Coefficient of Friction</string>
     <string name="setparams">Set Parameters</string>
     <string name="reset">RESET</string>
+    <string name="slowmotion">Slow Motion</string>
 </resources>
