--- a/CodeNotesInteractive/app/src/main/res/values/strings.xml
+++ b/CodeNotesInteractive/app/src/main/res/values/strings.xml
@@ -1,9 +1,12 @@
 <resources>
-    <string name="app_name">CodeNotesInteractive</string>
+    <string name="app_name">Interactive Experiments</string>
     <string name="bottom_menu_chat">ChatBot</string>
     <string name="bottom_menu_codenotes">Code</string>
     <string name="bottom_menu_simulation">Simulation</string>
     <string name="detector_dependency">Dependencies are not met</string>
+
+    <string name="bottom_target_title">Hello! Welcome to Interactive Experiments.</string>
+    <string name="bottom_target_detail">You can navigate between programming, experiments and chatbot from this bar.</string>
 
     <string name="detail_info_button_text">Start Learning!</string>
     <string name="check_connection_text">There is no internet connection!
