--- a/CodeNotesInteractive/app/src/main/res/values/strings.xml
+++ b/CodeNotesInteractive/app/src/main/res/values/strings.xml
@@ -15,6 +15,7 @@
     <string name="no_code_dialog_message">I am sorry! I could not recognize a meaningful code...</string>
     <string name="no_code_dialog_title">I could not recognize the code</string>
     <string name="all_text_required">All fields are required</string>
+    <string name="howto">How To Guide</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
