--- a/CodeNotesInteractive/app/src/main/res/values/strings.xml
+++ b/CodeNotesInteractive/app/src/main/res/values/strings.xml
@@ -36,11 +36,28 @@
     <string name="reset">RESET</string>
     <string name="slowmotion">Slow Motion</string>
 
-    <string name="base1_welcome">Welcome to the interactive experiments.</string>
-    <string name="base2_experiment_list">First, visit the experiment list to see what you can do.</string>
-    <string name="base3_choose_experiment">Choose an experiment from the list and examine the parameters.</string>
-    <string name="base4_parameters">You can change the parameters with Code Notes cards or manually from the menu.</string>
-    <string name="base5_coding_parameters">To code the parameters choose Code from the bottom bar.</string>
-    <string name="base6_experiment_result">After setting parameters you can start the experiment to see how it is going.</string>
-    <string name="base7_chatbot">You can use chatbot for small talks or talking about the experiments.</string>
+    <string name="previous">Previous</string>
+    <string name="next">Next</string>
+    <string name="cancel">Cancel</string>
+    <string name="finish">Finish</string>
+
+    <string name="tut1_welcome_title">Welcome!</string>
+    <string name="tut1_welcome_content">Interactive Experiments is an educational app with physics simulations.</string>
+    <string name="tut2_experiment_list_title">Experiment List</string>
+    <string name="tut2_experiment_list_content">You can choose an experimet from the list to play.</string>
+    <string name="tut3_choose_experiment_title">Play With Parameters.</string>
+    <string name="tut3_choose_experiment_content">Every experiments have parameters to play with them.</string>
+    <string name="tut4_parameters_title">Code Notes Integration</string>
+    <string name="tut4_parameters_content">You can change the parameters with Code Notes cards.</string>
+    <string name="tut5_coding_parameters_title">Code Notes Expressions</string>
+    <string name="tut5_coding_parameters_content">An example: SET ANGLE 25 can be used to set inclined planes angle.</string>
+    <string name="tut6_experiment_result_title">After Setting Parameters</string>
+    <string name="tut6_experiment_result_content">Examine the experiment to see how it is going.</string>
+    <string name="tut7_chatbot_title">Chatbot</string>
+    <string name="tut7_chatbot_content">You can do small talks or conversations about experiments.</string>
+    <string name="tut8_navigation_title">Navigation</string>
+    <string name="tut8_navigation_content">You can navigate through Chatbot or bottombar.</string>
+    <string name="tut9_finish_title">That is All!</string>
+    <string name="tut9_finish_content">Press FINISH to continue to the app.</string>
+
 </resources>
