Experiment Spinners Added

--- a/CodeNotesInteractive/app/src/main/res/values/strings.xml
+++ b/CodeNotesInteractive/app/src/main/res/values/strings.xml
@@ -32,7 +32,7 @@
     <string name="position">Initial Position</string>
     <string name="velocity">Initial Velocity</string>
     <string name="acceleration">Initial Acceleration</string>
-    <string name="setparams">Set Parameters</string>
+    <string name="setparams">SET</string>
     <string name="reset">RESET</string>
     <string name="slowmotion">Slow Motion</string>
 
