--- a/interactiveexperiments-android/app/src/main/res/values/strings.xml
+++ b/interactiveexperiments-android/app/src/main/res/values/strings.xml
@@ -29,6 +29,7 @@
     <string name="card_image_description">Simulation Thumbnail</string>
     <string name="paramter_error">You should define all the parameters before starting an experiment.</string>
     <string name="logout_completed">Log Out Successfull</string>
+    <string name="no_block_error">"No blocks in workspace. Skipping run request."</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
