--- a/interactiveexperiments-android/app/src/main/res/values/strings.xml
+++ b/interactiveexperiments-android/app/src/main/res/values/strings.xml
@@ -14,6 +14,8 @@
     <string name="menu_feedback">Send Feedback</string>
     <string name="send_text">SEND</string>
 
+    <string name="google_form_button_text"><u>Go To Google Foms to Fill Survey</u></string>
+
     <string name="blockly_error">You should have Android 18 or later release to work with Blockly!</string>
     <string name="detector_dependency">Dependencies are not met</string>
     <string name="sign_in_with_google">Sign in with Google to take notes, record your progress and chat with your friends online.</string>
